added download link

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 </h3>
                 <h5>GES 100, 101, 102 & 103</h5>
                 <!-- this is the download button with the link -->
-                <a download="YearOneSuite" href="" class="dwn-btn">
+                <a download="YearOneSuite" href="https://play.google.com/store/apps/details?id=ng.hybrid.yearonesuite" class="dwn-btn">
                     <i class="mdi mdi-google-play"></i>
                     
                     <p class="download">download from Play Store</p>
