added download link

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             </div>
         </section>
 
-        <a download="YearOneSuite" href="" class="dwn-btn mobile">
+        <a download="YearOneSuite" href="https://play.google.com/store/apps/details?id=ng.hybrid.yearonesuite" class="dwn-btn mobile">
             <i class="mdi mdi-google-play"></i>
             
             <p class="download">download from Play Store</p>
